// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PersonalInfo component should match snapshot 1`] = `
<DocumentFragment>
  <h3
    class="ant-typography css-dev-only-do-not-override-3rel02"
  >
    Personal Info
  </h3>
  <div
    class="ant-typography css-dev-only-do-not-override-3rel02"
  >
    <b>
      Gender: 
    </b>
    <span>
      Non-binary
    </span>
  </div>
  <div
    class="ant-typography css-dev-only-do-not-override-3rel02"
  >
    <b>
      Birthday: 
    </b>
    <span>
      January 1, 1969 (50 years old)
    </span>
  </div>
  <div
    class="ant-typography css-dev-only-do-not-override-3rel02"
  >
    <b>
      Place of Birth: 
    </b>
    <span>
      New York, USA
    </span>
  </div>
</DocumentFragment>
`;

exports[`PersonalInfo component should match snapshot with other data 1`] = `
<DocumentFragment>
  <h3
    class="ant-typography css-dev-only-do-not-override-3rel02"
  >
    Personal Info
  </h3>
  <div
    class="ant-typography css-dev-only-do-not-override-3rel02"
  >
    <b>
      Gender: 
    </b>
    <span>
      Non-binary
    </span>
  </div>
  <div
    class="ant-typography css-dev-only-do-not-override-3rel02"
  >
    <b>
      Birthday: 
    </b>
    <span>
      January 1, 1969
    </span>
  </div>
  <div
    class="ant-typography css-dev-only-do-not-override-3rel02"
  >
    <b>
      Deathday: 
    </b>
    <span>
      January 1, 2010 (40 years old)
    </span>
  </div>
  <div
    class="ant-typography css-dev-only-do-not-override-3rel02"
  >
    <b>
      Place of Birth: 
    </b>
    <span>
      New York, USA
    </span>
  </div>
</DocumentFragment>
`;
